[web-gui][evaluation] fix empty bonus size & spacing

--- a/web-gui/src/app/page-components/course-detail/course-results/evaluation-results/evaluation-results.component.scss
+++ b/web-gui/src/app/page-components/course-detail/course-results/evaluation-results/evaluation-results.component.scss
@@ -22,7 +22,7 @@
     text-align: left;
   }
   .task-column {
-    margin: 0 1vh;
+    margin-left: 8px;
   }
   .bonus-column {
     margin-right: -20px;
@@ -67,8 +67,6 @@
     min-height: 130px;
     max-height: 200px;
     font-size: small;
-    .task-result {
-    }
   }
 }
 
@@ -86,11 +84,6 @@
 /*.task-container > .state {
   margin-right: 1vw;
 }*/
-
-.category-bonus {
-  width: 30px;
-  height: 30px;
-}
 
 .bonus {
   display: flex;
@@ -140,8 +133,10 @@
 }
 
 .category-result-backpane {
+  width: 30px;
+  height: 30px;
   display: flex;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
   cursor: pointer;
   border-radius: 20px;
